# expbuild

./: Cargo.toml  LICENSE  Makefile  README.md  expbuild-server.toml.example  expbuild.toml.example  go.mod  go.sum
cli/: Cargo.toml
cli/src/: cli.rs  commands.rs  config.rs
cmd/api/: main.go
cmd/server/: main.go
config/: local.yml
configs/client/: expbuild.toml
configs/server/: expbuild-server-pool.toml  expbuild-server-remote-workers.toml  expbuild-server-test.toml  expbuild-server.toml.example
configs/worker/: expbuild-worker-docker.toml  expbuild-worker.toml
crates/cli/: Cargo.toml
crates/cli/src/: commands.rs  config.rs  main.rs
crates/client/: Cargo.toml
crates/client/src/: config.rs  error.rs  grpc.rs  lib.rs  request.rs  response.rs
crates/client/src/action/: directory.rs  error.rs  executor.rs  mod.rs  proto.rs
crates/client/src/client/: builder.rs  download.rs  execution.rs  main_client.rs  mod.rs  tls.rs
crates/proto/: Cargo.toml  build.rs
crates/proto/proto/expbuild/worker/v1/: worker_api.proto
crates/proto/src/: expbuild.worker.v1.rs  google.bytestream.rs  google.longrunning.rs  lib.rs
crates/server/: Cargo.toml
crates/server-bin/: Cargo.toml
crates/server-bin/src/: main.rs
crates/server/src/cache/: manager.rs  mod.rs
crates/server/src/cas/: manager.rs
crates/server/src/config/: mod.rs
crates/server/src/execution/: manager.rs  mod.rs  scheduler.rs
crates/server/src/grpc/: bytestream_service.rs  cas_service.rs  execution_service.rs  mod.rs  worker_scheduler_service.rs
crates/server/src/storage/: filesystem_action_cache.rs  mod.rs  traits.rs
crates/server/src/util/: digest.rs
crates/worker/: Cargo.toml
crates/worker/src/: agent.rs  config.rs  lib.rs  main.rs
crates/worker/src/executor/: docker.rs  host.rs  mod.rs  tests.rs  types.rs
docs/: ARCHITECTURE.md  DOCKER_EXECUTOR_SUMMARY.md  ISOLATION_DESIGN.md  REMOTE_WORKER_GUIDE.md  WORKER_DESIGN.md  WORKER_FRAMEWORK.md
pkg/api/: router.go
pkg/api/books/: handler.go
pkg/api/instances/: handler.go
pkg/auth/: auth.go
pkg/cache/: cache.go
pkg/config/: config.go
pkg/database/: database.go
pkg/docs/: docs.go
pkg/exe/: service.go
pkg/log/: log.go
pkg/middleware/: authenticateJWT.go
pkg/models/: instance.go
re_grpc/: Cargo.toml
re_grpc/src/: digest.rs  lib.rs  metadata.rs
re_grpc/src/action/: builder.rs  directory.rs  executor.rs  proto.rs  result.rs  types.rs
re_grpc/src/client/: capabilities.rs  compression.rs  execution.rs  helpers.rs  interceptor.rs  main_client.rs  mod.rs  tests.rs  tls.rs  types.rs  upload.rs  uri.rs
re_grpc_proto/: build.rs
re_grpc_proto/src/: build.bazel.remote.execution.v2.rs  build.bazel.semver.rs  google.api.rs  google.rpc.rs  lib.rs
re_server/: Cargo.toml
re_server/src/: lib.rs
re_server/src/cache/: manager.rs
re_server/src/cas/: manager.rs  mod.rs
re_server/src/config/: mod.rs
re_server/src/execution/: docker_worker.rs  host_worker.rs  manager.rs  mod.rs  pool_factory.rs  worker.rs  worker_pool.rs
re_server/src/grpc/: action_cache_service.rs  bytestream_service.rs  capabilities_service.rs  execution_service.rs  mod.rs
re_server/src/storage/: filesystem.rs  filesystem_action_cache.rs
re_server/src/util/: mod.rs
re_server_bin/: Cargo.toml
re_server_bin/src/: main.rs
tests/: Cargo.toml
tests/common/: client_factory.rs  mod.rs  server_harness.rs  worker_harness.rs
tests/fixtures/test_projects/hello_world/: build.sh  expected_output.txt  hello.c
tests/integration/: test_cas_operations.rs  test_execution_flow.rs
