[workspace]
members = ["re_grpc", "re_grpc_proto", "cli"]
resolver = "2"

[workspace.package]
license = "MIT OR Apache-2.0"
repository = "https://github.com/your-org/exbuild-cli"
edition = "2024"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.40", features = ["full"] }
tokio-stream = "0.1"
tokio-util = { version = "0.7", features = ["codec", "io"] }
futures = "0.3"

# gRPC and protobuf
tonic = { version = "0.13" }
prost = "0.13"
prost-types = "0.13"

# Compression
async-compression = { version = "0.4", features = ["tokio", "brotli", "deflate", "zstd"] }
zstd = "0.13"

# HTTP
http = "1.0"
hyper = { version = "1.5", features = ["client", "http1", "http2"] }
hyper-util = { version = "0.1", features = ["client", "client-legacy", "http1", "http2", "tokio"] }
tower = { version = "0.5", features = ["util"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Utilities
once_cell = "1.19"
lru = "0.12"
regex = "1.10"
uuid = { version = "1.10", features = ["v4"] }
tracing = "0.1"

# CLI dependencies
clap = { version = "4.5", features = ["derive", "cargo", "env"] }
toml = "0.8"
serde_json = "1.0"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Dev dependencies
tempfile = "3.12"
