[package]
description = "A library providing remote execution using gRPC"
edition = { workspace = true }
license = { workspace = true }
name = "remote_execution"
repository = { workspace = true }
version = "0.1.0"

[dependencies]
anyhow = { workspace = true }
async-compression = { workspace = true }
futures = { workspace = true }
http = { workspace = true }
hyper = { workspace = true }
hyper-util = { workspace = true }
lru = { workspace = true }
once_cell = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
regex = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tokio-util = { workspace = true }
tonic = { workspace = true }
tower = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
zstd = { workspace = true }
serde = { workspace = true }
sha2 = "0.10"
hex = "0.4"

re_grpc_proto = { path = "../re_grpc_proto" }

[features]
default = []
tls = []

[dev-dependencies]
tempfile = { workspace = true }
