[package]
name = "re_server"
version = "0.1.0"
description = "Bazel Remote Execution API server library"
license.workspace = true
repository.workspace = true
edition.workspace = true

[dependencies]
re_grpc_proto = { path = "../re_grpc_proto" }

anyhow = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tokio-util = { workspace = true }
futures = { workspace = true }

tonic = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }

serde = { workspace = true }
toml = { workspace = true }
serde_json = { workspace = true }

tracing = { workspace = true }
once_cell = { workspace = true }
uuid = { workspace = true }

sha2 = "0.10"
hex = "0.4"
filetime = "0.2"

async-trait = "0.1"

[dev-dependencies]
tempfile = { workspace = true }
