[package]
name = "expbuild-integration-tests"
version = "0.1.0"
edition.workspace = true
publish = false

[lib]
path = "common/mod.rs"

[[test]]
name = "test_cas_operations"
path = "integration/test_cas_operations.rs"
harness = true

[[test]]
name = "test_execution_flow"
path = "integration/test_execution_flow.rs"
harness = true

[dependencies]
remote_execution = { path = "../crates/client" }
re_grpc_proto = { path = "../crates/proto" }
re_server = { path = "../crates/server" }
expbuild-worker = { path = "../crates/worker" }

tokio.workspace = true
tokio-stream.workspace = true
tonic.workspace = true
prost.workspace = true
prost-types.workspace = true
anyhow.workspace = true
thiserror.workspace = true
tempfile.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
futures.workspace = true
serde.workspace = true
toml.workspace = true
uuid.workspace = true
sha2 = "0.10"

[dev-dependencies]

