[package]
name = "expbuild-cli"
version = "0.1.0"
description = "Command-line tool for Bazel Remote Execution API"
edition = { workspace = true }
license = { workspace = true }
repository = { workspace = true }

[[bin]]
name = "expbuild-cli"
path = "src/main.rs"

[dependencies]
remote_execution = { path = "../client" }

anyhow = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
tracing = { workspace = true }

clap = { workspace = true }
toml = { workspace = true }
serde_json = { workspace = true }
tracing-subscriber = { workspace = true }

sha2 = "0.10"
hex = "0.4"
