[package]
description = "A library providing gRPC client for Bazel remote execution"
edition = { workspace = true }
license = { workspace = true }
name = "re_grpc_proto"
repository = { workspace = true }
version = "0.1.0"

[dependencies]
prost = { workspace = true }
prost-types = { workspace = true }
serde = { workspace = true, features = ["derive"] }
tonic = { workspace = true }

[build-dependencies]
tonic-build = "0.13.0"