[package]
name = "expbuild-worker"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "expbuild-worker"
path = "src/main.rs"

[dependencies]
remote_execution = { path = "../client" }
re_grpc_proto = { path = "../proto" }

tokio.workspace = true
tokio-stream.workspace = true
tonic.workspace = true
prost.workspace = true
prost-types.workspace = true

anyhow.workspace = true
thiserror.workspace = true

clap.workspace = true
serde.workspace = true
toml.workspace = true

tracing.workspace = true
tracing-subscriber.workspace = true

uuid.workspace = true
async-trait = "0.1"
num_cpus = "1.16"
sha2 = "0.10"

# Docker support
bollard = "0.17"
scopeguard = "1.2"
futures = { workspace = true }
tar = "0.4"

[dev-dependencies]
tempfile.workspace = true
